--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         
         <div class="h1111">
-            <h1 class="title">Alijon__farmonoff</h1>
+            <h1 class="title">Alijon__Farmonoff</h1>
         </div>
         
         <div class="texttt">
